# Tension

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_wasm.sh  pyproject.toml
core/: build.zig  engine.zig  graphics.zig  main.zig  wasm.zig
demos/: README.md
demos/basic-demo/: Cargo.toml
demos/basic-demo/modules/: entity_spawner.wasm  ts_spawner.wasm
demos/basic-demo/src/: main.rs
demos/tension-ts-wasm-demo/: README.md  build.sh  generate_host_decls.js  package-lock.json  package.json  run.sh
demos/tension-ts-wasm-demo/assembly/: asconfig.json  index.ts  simple.ts
demos/typescript-demo/: README.md  package.json  tsconfig.json
demos/typescript-demo/assembly/: asconfig.json  index.ts  package.json
demos/typescript-demo/public/: index.html
demos/typescript-demo/src/: index.ts  wasm-loader.ts
demos/typescript-demo/src/types/: frankenstein.d.ts
doc/: architecture.txt  evaluation.txt  philosophy.txt  reasoning.txt  vision.txt
doc/namesuggestions/: copilotsuggested.txt  deepseeksuggestion.txt  geminisuggested.txt  groksuggested.txt  openaisuggest.txt  prompt asked to ai engines.txt
docs/: api-contract.txt  architecture.txt  name.md  philosophy.txt  reasoning.txt  vision.txt
frankenstein-ts-wasm-demo/: README.md  package.json  webpack.config.js
frankenstein-ts-wasm-demo/assembly/: index.ts  package.json
frankenstein-ts-wasm-demo/public/: index.html
frankenstein-ts-wasm-demo/scripts/: build-wasm.sh
frankenstein-ts-wasm-demo/src/: index.ts
frankenstein-ts-wasm-demo/src/types/: frankenstein.d.ts
modules/entity-spawner/: Cargo.toml
modules/entity-spawner/src/: lib.rs
modules/ts-demo/: build.sh  package.json  scene.ts
modules/ts-spawner/: build.sh  none.ts  package-lock.json  package.json
modules/ts-spawner/assembly/: index.ts  none.ts
src/: main.rs
src/audio/: Cargo.toml
src/audio/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: api.rs  engine.rs  events.rs  input.rs  lib.rs  memory.rs  time.rs  world.rs
src/physics/: Cargo.toml
src/physics/src/: lib.rs
src/renderer/: Cargo.toml
src/renderer/src/: lib.rs
src/runtime/: Cargo.toml  build.rs
src/runtime/src/: bindings.rs  engine.rs  lib.rs  loader.rs  module.rs  sandbox.rs
tension/: __init__.py  duality_mapping.py  engine.py  essence_extraction.py  tension_scoring.py  trace_generation.py
tests/: __init__.py  test_essence_extraction.py  test_tension_engine.py
