[package]
name = "frankenstein-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }